--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body{
 
 .apresentacao__conteudo {
     width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
@@ -33,6 +36,7 @@ body{
 }
 
 .apresentacao__conteudo__paragrafo {
+    display: flex;
     font-size: 24px;
     font-family: "Montserrat", sans-serif;
 }
