--- a/style.css
+++ b/style.css
@@ -1,26 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body{
+body {
     height: 100vh;
-    box-sizing: border-box;
     background-color: black;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    font-family: "Montserrat", sans-serif;
 }
 
 .titulo-destaque {
-    color: #22D4FD
+    color: #22D4FD;
 }
 
 .apresentacao {
-    margin: 10%;
+    max-width: 1200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 40px;
 }
 
 .apresentacao__conteudo {
@@ -30,33 +36,30 @@ body{
     gap: 40px;
 }
 
-.apresentacao__conteudo__titulo {
+.apresentacao__conteudo__itulot {
     font-size: 36px;
     font-family: "Krona One", sans-serif;
+    line-height: 1.2;
 }
 
 .apresentacao__conteudo__paragrafo {
-    display: flex;
     font-size: 24px;
-    font-family: "Montserrat", sans-serif;
+    line-height: 1.6;
 }
 
 .apresentacao__links {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     gap: 32px;
 }
 
-.apresentacao__links_subtitulo {
+.apresentacao__links__subtitulo {
     font-family: "Krona One", sans-serif;
     font-weight: 400;
     font-size: 24px;
 }
 
 .apresentacao__links__link {
-    /* background-color: #22D4FD; */ /* Para ativar o comentário utilize Ctrl + K + C*/
     border: 2px solid #22D4FD;
     width: 378px;
     text-align: center;
@@ -66,5 +69,30 @@ body{
     padding: 21.5px 0;
     text-decoration: none;
     color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.apresentacao__links__link:hover {
+    background-color: #22D4FD;
+    color: #000;
+}
+
+.image-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
+    border: 5px solid #22D4FD; /* Borda ao redor da imagem */
+    overflow: hidden;
+    margin-left: 20px;
+    z-index: 0;
+}
+
+.styled-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: fill; /* Preenche completamente o espaço */
+    position: relative;
+    z-index: 2;
 }
