--- a/style.css
+++ b/style.css
@@ -7,13 +7,8 @@
 }
 
 body {
-    height: 100vh;
     background-color: black;
     color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
     font-family: "Montserrat", sans-serif;
 }
 
@@ -22,11 +17,11 @@ body {
 }
 
 .apresentacao {
-    max-width: 1200px;
+    padding: 8% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px;
+    
 }
 
 .apresentacao__conteudo {
@@ -36,7 +31,7 @@ body {
     gap: 40px;
 }
 
-.apresentacao__conteudo__itulot {
+.apresentacao__conteudo__titulo {
     font-size: 36px;
     font-family: "Krona One", sans-serif;
     line-height: 1.2;
@@ -74,7 +69,7 @@ body {
 
 .apresentacao__links__link:hover {
     background-color: #22D4FD;
-    color: #000;
+    color: #000000;
 }
 
 .image-container {
@@ -95,4 +90,13 @@ body {
     object-fit: fill; /* Preenche completamente o espaço */
     position: relative;
     z-index: 2;
+}
+.rodape {
+    color: #000000;
+    background-color: #22D4FD;
+    padding: 24px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 400; 
 }
