--- a/style.css
+++ b/style.css
@@ -12,12 +12,25 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-.titulo-destaque {
+.cabecalho {
+    padding: 2% 0% 0% 15% ;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 600;
     color: #22D4FD;
 }
 
+
 .apresentacao {
-    padding: 8% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -35,6 +48,9 @@ body {
     font-size: 36px;
     font-family: "Krona One", sans-serif;
     line-height: 1.2;
+}
+.titulo-destaque {
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__paragrafo {
