--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #F6F6F6;
+    --cor-terciaria: #22D4FD;
+    --cor-hover: #272727;
+
+    --fonte-primaria: "Krona One", sans-serif;
+    --fonte-secundaria: "Montserrat", sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,9 +17,9 @@
 }
 
 body {
-    background-color: black;
-    color: white;
-    font-family: "Montserrat", sans-serif;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 }
 
 .cabecalho {
@@ -22,10 +32,10 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
@@ -47,7 +57,7 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-size: 36px;
-    font-family: "Krona One", sans-serif;
+    font-family: var(--fonte-primaria);
     line-height: 1.2;
 }
 .titulo-destaque {
@@ -66,13 +76,13 @@ body {
 }
 
 .apresentacao__links__subtitulo {
-    font-family: "Krona One", sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
 
 .apresentacao__links__link {
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--cor-terciaria);
     width: 378px;
     text-align: center;
     border-radius: 8px;
@@ -80,13 +90,13 @@ body {
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
+    color: var(--cor-secundaria);
     transition: background-color 0.3s, color 0.3s;
 }
 
 .apresentacao__links__link:hover {
-    background-color: #22D4FD;
-    color: #000000;
+    background-color: var(--cor-hover);
+    color: var(--cor-primaria);
 }
 
 .image-container {
@@ -94,7 +104,7 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 20px;
-    border: 5px solid #22D4FD; /* Borda ao redor da imagem */
+    border: 5px solid var(--cor-terciaria); /* Borda ao redor da imagem */
     overflow: hidden;
     margin-left: 20px;
     z-index: 0;
@@ -109,11 +119,11 @@ body {
     z-index: 2;
 }
 .rodape {
-    color: #000000;
-    background-color: #22D4FD;
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 24px;
     text-align: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--fonte-primaria);
     font-size: 24px;
     font-weight: 400; 
 }
