--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -80,7 +80,7 @@ body {
     font-size: 24px;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
     border: 2px solid var(--cor-terciaria);
     width: 378px;
     text-align: center;
@@ -93,7 +93,7 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-.apresentacao__links__link:hover {
+.apresentacao__links__links:hover {
     background-color: var(--cor-hover);
     color: var(--cor-primaria);
 }
@@ -117,6 +117,10 @@ body {
     position: relative;
     z-index: 2;
 }
+.apresentacao__imagem {
+    width: 50%;
+}
+
 .rodape {
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
