--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+    gap: 82px;
 }
 
 .apresentacao__conteudo {
@@ -129,4 +129,9 @@ body {
     font-family: var(--fonte-primaria);
     font-size: 1.5rem;
     font-weight: 400; 
+}
+@media (max-width: 1200px) {
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
 }
