Adiciona padding à classe cabecalho e centraliza o menu no layout responsivo

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,14 @@ body {
     font-weight: 400; 
 }
 @media (max-width: 1200px) {
+    .cabecalho {
+        padding: 10%;
+    }
+
+    .cabecalho__menu {
+        justify-content: center;
+    }
+
     .apresentacao {
         flex-direction: column-reverse;
     }
