--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,7 @@ body {
     font-size: 1.5rem;
     font-weight: 400; 
 }
+
 @media (max-width: 1200px) {
     .cabecalho {
         padding: 10%;
@@ -141,5 +142,10 @@ body {
 
     .apresentacao {
         flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .apresentacao__conteudo {
+        width: auto%;
+        text-align: center;
     }
 }
