--- a/styles/style.css
+++ b/styles/style.css
@@ -99,24 +99,13 @@ body {
 }
 
 .image-container {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    border-radius: 20px;
-    border: 5px solid var(--cor-terciaria); /* Borda ao redor da imagem */
-    overflow: hidden;
-    margin-left: 20px;
-    z-index: 0;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
-.styled-image {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    object-fit: fill; /* Preenche completamente o espaço */
-    position: relative;
-    z-index: 2;
+.image-container:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); /* Sombra mais forte no hover */
 }
+
 .apresentacao__imagem {
     width: 50%;
 }
