--- a/styles/style.css
+++ b/styles/style.css
@@ -6,83 +6,78 @@
     --cor-terciaria: #22D4FD;
     --cor-hover: #272727;
 
-    --fonte-primaria: "Krona One", sans-serif;
-    --fonte-secundaria: "Montserrat", sans-serif;
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
 }
-
-* {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-body {
+body{
+    box-sizing: border-box;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
-    font-family: var(--fonte-secundaria);
 }
 
-.cabecalho {
-    padding: 2% 0% 0% 15% ;
+.cabecalho{
+    padding: 2% 0% 0% 15%;
 }
-
-.cabecalho__menu {
+.cabecalho__menu{
     display: flex;
     gap: 80px;
 }
-
-.cabecalho__menu__link {
+.cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
 }
-
-
-.apresentacao {
+.apresentacao{
     padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 82px;
 }
-
-.apresentacao__conteudo {
+.apresentacao__conteudo{
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.apresentacao__conteudo__titulo {
+.apresentacao__conteudo__titulo{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
-.titulo-destaque {
-    color: #22D4FD;
+.titulo-destaque{
+    color: var(--cor-terciaria);
 }
-
-.apresentacao__conteudo__paragrafo {
+.apresentacao__conteudo__texto{
     font-size: 1.5rem;
-    line-height: 1.6;
+    font-family: var(--fonte-secundaria);
 }
 
-.apresentacao__links {
+.apresentacao__links{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     gap: 32px;
 }
-
-.apresentacao__links__subtitulo {
+.apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
-
-.apresentacao__links__navegacao {
+.apresentacao__links__navegacao{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -90,50 +85,36 @@ body {
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-secundaria);
-    transition: background-color 0.3s, color 0.3s;
+    font-family: var(--fonte-secundaria);
 }
-
-.apresentacao__links__links:hover {
+.apresentacao__links__navegacao:hover{
     background-color: var(--cor-hover);
-    color: var(--cor-primaria);
 }
-
-.image-container {
-    transition: box-shadow 0.3s ease-in-out;
-}
-
-.image-container:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); /* Sombra mais forte no hover */
-}
-
-.apresentacao__imagem {
+.apresentacao__imagem{
     width: 50%;
 }
-
-.rodape {
+.rodape{
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
     padding: 24px;
     text-align: center;
-    font-family: var(--fonte-primaria);
+    font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
-    font-weight: 400; 
+    font-weight: 400;
 }
 
 @media (max-width: 1200px) {
-    .cabecalho {
-        padding: 10%;
+    .cabecalho{
+         padding: 10%;  
     }
-
-    .cabecalho__menu {
+    .cabecalho__menu{
         justify-content: center;
     }
-
-    .apresentacao {
+    .apresentacao{
         flex-direction: column-reverse;
         padding: 5%;
     }
-    .apresentacao__conteudo {
-        width: auto%;
+    .apresentacao__conteudo{
+        width: auto;
     }
 }
